--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
 API_KEY=<YOUR API KEY>
 DEVELOPER_CHAT_ID=<YOUR CHAT ID FOR RECEIVING NOTIFICATIONS>
+FEEDBACK_CHAT_ID=<YOUR CHAT ID FOR RECEIVING FEEDBACK>
