dockerize and use postgres

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,9 @@
 API_KEY=<YOUR API KEY>
 DEVELOPER_CHAT_ID=<YOUR CHAT ID FOR RECEIVING NOTIFICATIONS>
 FEEDBACK_CHAT_ID=<YOUR CHAT ID FOR RECEIVING FEEDBACK>
+
+POSTGRES_HOST=postgres
+POSTGRES_PORT=5432
+POSTGRES_USER=citizen
+POSTGRES_PASSWORD=<some secret>
+POSTGRES_DB=citizen
