fix a bug; improve readme

--- a/.env.example
+++ b/.env.example
@@ -5,5 +5,5 @@ FEEDBACK_CHAT_ID=<YOUR CHAT ID FOR RECEIVING FEEDBACK>
 POSTGRES_HOST=postgres
 POSTGRES_PORT=5432
 POSTGRES_USER=citizen
-POSTGRES_PASSWORD=<some secret>
+POSTGRES_PASSWORD=<MAKE SURE TO CHANGE IT ON A SECURE PASSWORD>
 POSTGRES_DB=citizen
